[gd_scene load_steps=10 format=2]

[ext_resource path="res://Assets/Other/MetalMania-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://UI.gd" type="Script" id=2]
[ext_resource path="res://Assets/Other/HeartIcon.png" type="Texture" id=3]
[ext_resource path="res://Assets/Other/ShellIcon.png" type="Texture" id=4]

[sub_resource type="DynamicFont" id=1]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 32
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=5]
resource_name = "FadeGameOver"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 1, 1, 1, 1 ) ]
}

[sub_resource type="Animation" id=3]
resource_name = "FadeIntro"
length = 1.5
tracks/0/type = "value"
tracks/0/path = NodePath("BlackBackground:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Title:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CenterText:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 1.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 1, 1, 1, 0 ) ]
}

[node name="UI" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BlackBackground" type="ColorRect" parent="."]
margin_right = 1024.0
margin_bottom = 600.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.5
margin_top = 20.0
margin_right = 108.5
margin_bottom = 80.0
custom_fonts/font = SubResource( 1 )
text = "RGB Pigs"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -23.0
margin_right = 64.0
margin_bottom = 44.0
custom_fonts/font = SubResource( 2 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -192.0
margin_top = -132.0
margin_right = 192.0
margin_bottom = -52.0
custom_fonts/font = SubResource( 4 )
text = "Get ready..."
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FadeGameOver = SubResource( 5 )
anims/FadeIntro = SubResource( 3 )

[node name="Hearts" type="Control" parent="."]
visible = false
margin_right = 208.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="H1" type="Sprite" parent="Hearts"]
position = Vector2( 40, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="H2" type="Sprite" parent="Hearts"]
position = Vector2( 104, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="H3" type="Sprite" parent="Hearts"]
position = Vector2( 168, 40 )
scale = Vector2( 6, 6 )
texture = ExtResource( 3 )

[node name="Shells" type="Control" parent="."]
visible = false
anchor_left = 1.0
anchor_right = 1.0
margin_left = -144.0
margin_bottom = 64.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="S1" type="Sprite" parent="Shells"]
position = Vector2( 40, 32 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )

[node name="S2" type="Sprite" parent="Shells"]
position = Vector2( 104, 32 )
scale = Vector2( 6, 6 )
texture = ExtResource( 4 )
